<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/susisiektiLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/contact"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:id="@+id/vardasLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/susisiektiLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/vardasLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorFormEditTextBackground"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"

            />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorFormEditTextBackground"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:id="@+id/messageLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messageLabel"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorFormEditTextBackground"
            android:ems="10"
            android:gravity="top"
            android:padding="15dp"
            android:singleLine="true"
            android:maxLength="500"
            />

        <TextView
            android:id="@+id/signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editMessage"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:text="@string/authorSignature"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="italic" />

        <ImageButton

            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/signature"
            android:background="@null"
            android:imeOptions="actionSend"
            android:onClick="onSend"
            android:padding="15dp"
            android:src="@android:drawable/ic_menu_send" />


    </RelativeLayout>
</ScrollView>